# LensSim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: .gitignore  README.md  dgauss50mm.json  planar.json  tessar.json
ext/: CMakeLists.txt
python/: .gitignore  LensSystem.py  binding.cpp  example.py  test.py
src/: bounds2.h  constant.h  film.cpp  film.h  grid-data.h  grid.cpp  hit.h  ibl.h  lens-element.h  lens-system.h  lens.h  linear.h  main.cpp  parallel.cpp  parallel.h  random.h  ray.h  sampler.h  sphere.cpp  sphere.h  vec2.h  vec3.h
src/core/: bounds2.h  hit.h  ray.h  spectrum.cpp  spectrum.h  type.h  vec2.h  vec3.h
src/lens-system/: ior.h  lens-element.h  lens-system.cpp  lens-system.h  sellmeier.h
src/parallel/: parallel.cpp
src/samplers/: random.h  rng.cpp  rng.h  sampler.h
test/: CMakeLists.txt  test.cpp
